Allow users to confirm name or email changes
